# betazero

./: .gitignore  Cargo.toml  gen_model_2.py  requirements.txt  test.py
betazero/: Cargo.toml  generate_model.py  train_model.py
betazero-nn/: Cargo.toml  generate_model.py  readme.md  requirements.txt  train_model.py
betazero-nn/examples/addition/: model.pb
betazero-nn/model/: fingerprint.pb  saved_model.pb
betazero-nn/model/variables/: variables.data-00000-of-00001  variables.index
betazero-nn/models/default/: default.py
betazero-nn/src/: lib.rs  record.rs  session_handle.rs
betazero-nn/tests/: misc.rs
betazero/src/: lib.rs  main.rs  mc_tree.rs  positions.rs  record.rs  session_handle.rs
betazero/tests/: misc.rs
hamlindigo_blue/: Cargo.toml  evaluate_model.py  generate_ae.py  generate_model.py
hamlindigo_blue/src/: main.rs
nards/: Cargo.toml  evaluate_model.py  generate_ae.py  generate_model.py
nards/src/: main.rs  prepare.rs
src/: lib.rs  main.rs  mc_tree.rs  record.rs
