[package]
name = "betazero-nn"
version = "0.1.0"
edition = "2021"

[dependencies]
citron-core = { path = "../../citron/citron-core", features=["serde"] }

rand = "*"

tensorflow = { version = "^0.21", features = ["tensorflow_gpu"] }
ndarray = { version="^0.15", features = ["serde"] }

serde = { version = "^1.0", features = ["derive"] }
serde_with = "^3.12"