[package]
name = "betazero"
version = "0.1.0"
edition = "2021"

[dependencies]
citron-core = { path = "../../citron/citron-core", features=["serde", "nn_evaluation"] }

rand = "0.9.0"

petgraph = "0.6.5"
tensorflow = { version = "^0.21", features = ["ndarray"] }
ndarray = { version="^0.15", features = ["serde"] }

chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_with = "^3.12"
serde-pickle = "1.1.1"
